# ws_moveit

./: .gitignore  README.md  rviz_trolley.rviz
src/franka_ros/franka_description/robots/common/: franka_arm.xacro  franka_hand.xacro  utils.xacro
src/franka_ros/franka_description/robots/panda/: panda.urdf.xacro
src/franka_ros/franka_gazebo/launch/: panda.launch  robot.launch
src/franka_ros/franka_gazebo/models/bowl/: model.sdf
src/franka_ros/franka_gazebo/models/cube_20k/: model.sdf
src/franka_ros/franka_gazebo/models/cube_20k_green/: model.sdf
src/franka_ros/franka_gazebo/models/cube_20k_red1/: model.config  model.sdf
src/franka_ros/franka_gazebo/models/cube_20k_red2/: model.sdf
src/franka_ros/franka_gazebo/models/stone1/: model.sdf
src/franka_ros/franka_gazebo/models/stone2/: model.sdf
src/franka_ros/franka_gazebo/models/stone3/: model.sdf
src/franka_ros/franka_gazebo/models/wooden_table/: model.sdf
src/franka_ros/franka_gazebo/models/wooden_table1/: model.config  model.sdf
src/franka_ros/franka_gazebo/models/wooden_table2/: model.sdf
src/moveit_resources/panda_moveit_config/launch/: moveit.rviz
src/panda_moveit/: CMakeLists.txt  README.md  moveit.rviz  package.xml
src/panda_moveit/ggcnn/: requirements.txt  test.py
src/panda_moveit/include/panda_moveit/: PCDWriter.hpp  PickAndPlace.hpp  PointCloudSubscriber.hpp  Utilities.hpp
src/panda_moveit/launch/: pick_and_place.launch  run_gazebo.launch  run_gazebo.sh  run_sim.launch  run_sim.sh  spawn_world_1cube.launch  spawn_world_3cubes.launch
src/panda_moveit/scripts/: pick_and_place.py  point_cloud_bounding_box.py
src/panda_moveit/src/: PCDWriter.cpp  PickAndPlace.cpp  PointCloudSubscriber.cpp  Utilities.cpp  main.cpp  unusedcode.txt
src/panda_moveit/worlds/: 3cubes_pnp.txt
src/panda_moveit_config/config/: ros_controllers.yaml  sensors_d435_pointcloud.yaml
src/panda_moveit_config/launch/: move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
src/panda_physical/: CMakeLists.txt  package.xml
src/panda_physical/include/: Manipulate.hpp
src/panda_physical/src/: Manipulate.cpp  main.cpp
src/realsense_gazebo_description/urdf/: _d435.urdf.xacro  _d435i.gazebo.xacro
src/realsense_gazebo_plugin/include/realsense_gazebo_plugin/: RealSensePlugin.h  gazebo_ros_realsense.h
src/realsense_gazebo_plugin/src/: gazebo_ros_realsense.cpp
