<?xml version="1.0"?>
<package format="2">
  <name>panda_moveit</name>
  <version>0.0.0</version>
  <description>The panda_moveit package</description>

  <maintainer email="thouardkai@gmail.com">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>geometric_shapes</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
  <depend>nodelet</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>realsense_gazebo_description</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>actionlib</depend>
  <depend>franka_gripper</depend>
  <depend>libpcl-all-dev</depend>

  <!-- <depend>python-o3d</depend> -->
  <!-- <depend>realsense2_description</depend> -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
