<?xml version="1.0"?>
<package format="2">
  <name>panda_physical</name>
  <version>0.0.0</version>
  <description>The panda_physical package</description>
  <maintainer email="thouardkai@gmail.com">Kai Thouard</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- <moveit_core plugin="${prefix}/lib/libpanda_moveit_core.so"/>
    <moveit_ros_planning_interface plugin="${prefix}/lib/libpanda_moveit_ros_planning_interface.so"/> -->
  </export>
</package>